[tool.poetry]
name = "pynih"
version = "0.1.0"
description = "python wrapper for nih reporter apis --> https://api.reporter.nih.gov/"
authors = ["Jeremy Watt <jermwatt@gmail.com>"]
readme = "README.md"
packages = [{include = "pynih"}]

license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.11"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
